tests/algorithms/x/Python/other/lru_cache.out
Traceback (most recent call last):
  File "/workspace/mochi/tests/algorithms/x/Python/other/lru_cache.py", line 188, in <module>
    main()
  File "/workspace/mochi/tests/algorithms/x/Python/other/lru_cache.py", line 168, in main
    cache = lru_put(cache, 1, 1)
            ^^^^^^^^^^^^^^^^^^^^
  File "/workspace/mochi/tests/algorithms/x/Python/other/lru_cache.py", line 141, in lru_put
    cache.list["nodes"] = nodes
    ~~~~~~~~~~^^^^^^^^^
TypeError: 'DoubleLinkedList' object does not support item assignment